# code_formatting_standards

./: .dockerignore  .editorconfig  .gitignore  README.md  pyproject.toml
examples/: badly_fortmatted_code.txt
src/: badly_formatted_code.py  formatting_example.py
