#:schema https://json.schemastore.org/pyproject.json
# =========================================
#   GOSH Python Project Quality Template
#   Optimised for Ruff, Pylance/Pyright, Pytest
#   Python 3.10+
# =========================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name" # UPDATE: Rename project
version = "0.1.0"
description = "Add your description here" # UPDATE: Add project description
authors = [{ name = "your-name", email = "your-email@gosh.nhs.uk" }] # UPDATE: Add your details
# license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10" # UPDATE as appropriate
dependencies = [

] # Add dependencies as appropriate

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
    "pre-commit>=2.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

# [project.scripts]
# cli-tool-name = "project-name.cli:main"
[tool.setuptools]
package-dir = {"" = "src"} # UPDATE as appropriate

[tool.setuptools.packages.find]
where = ["src"] # UPDATE as appropriate
include = ["*"]
exclude = ["tests*", "scripts*", "docs*", "examples*"] # Amend as necessary

# ============================================================
# CLI Formatting Commands
# ============================================================

# Formats code, fixes issues, and type checks
# ruff format . && ruff check . --fix && pyright

# Lint and type check without fixing
# ruff check . && pyright

# Only linting, no type checking
# ruff check . --fix

# ============================================================
# RUFF CONFIGURATION - MEDIUM STRICTNESS
# ============================================================
[tool.ruff]
target-version = "py310" # UPDATE as appropriate
line-length = 120
indent-width = 4
fix = true
show-fixes = true

[tool.ruff.lint]
# Comprehensive rule set for strict checking
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear  (Noisy)
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print (no print statements) (Noisy)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint (Noisy)
    "PERF",   # perflint (performance)
    "ANN",    # flake8-annotations  (Noisy)
    "ARG",    # flake8-unused-arguments
    "RET",    # flake8-return
    # "TCH",    # flake8-type-checking
]

ignore = [
    "E501",    # Line too long (formatter handles this)
    "S603",    # subprocess without shell=True (too strict - regularly use subprocess in clinical pipelines)
    "S607",    # Starting a process with a partial path (too strict - regularly use subprocess in clinical pipelines)
    #"ANN101",  # Missing type annotation for self (redundant)
    #"ANN102",  # Missing type annotation for cls (redundant)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Allow unused imports in __init__.py
]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Don't require annotations in tests
]

[tool.ruff.lint.isort]
# known-first-party = ["YOUR-PROJECT-NAME"]  # Should match project name above, only used if sorting imports by type
# combine-as-imports = true # Optional: group imports by type (stdlib, third-party, local)
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = false # Update as necessary

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.

# ============================================================
# PYRIGHT CONFIGURATION - MODERATE STRICTNESS
# ============================================================
[tool.pyright]
pythonVersion = "3.10" # UPDATE as appropriate
typeCheckingMode = "basic"  # Change to "strict" if you enable strict mode below

# IMPORT AND MODULE CHECKS
reportMissingImports = true
reportUndefinedVariable = true
reportAssertAlwaysTrue = true
reportInvalidStringEscapeSequence = true

# STRICT NULL SAFETY
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

# TYPE COMPLETENESS
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownParameterType = true
reportUnknownLambdaType = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true

# CLASS AND INHERITANCE CHECKS
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportOverlappingOverload = true

# CODE QUALITY
reportPrivateUsage = true
reportConstantRedefinition = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true

# FUNCTION/METHOD SIGNATURE STRICTNESS
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportCallInDefaultInitializer = true

# ADDITIONAL STRICT CHECKS
reportDeprecated = "warning"
reportImportCycles = "warning"

# EXCLUSIONS
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".git",
    ".mypy_cache",
    ".pyright_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "env",
    "logs",
    "output",
    "data",
    "build",
    "dist",
    "*.egg-info",
]

venvPath = "."
venv = ".venv" # UPDATE as appropriate

# STRICT MODE OPTIONS (commented out for now)
# typeCheckingMode = "strict"
# reportMissingTypeStubs = true
# reportUnknownArgumentType = true
# reportUnknownVariableType = true
# reportUnknownMemberType = true
# reportMissingSuperCall = true
# reportUnusedClass = "error"
# reportUnusedFunction = "error"
# reportUnusedVariable = "error"
# reportUnusedImport = "error"
# reportDuplicateImport = "error"
# reportUnnecessaryIsInstance = "error"
# reportUnnecessaryCast = "error"
# reportUnnecessaryComparison = "error"
# reportUnnecessaryContains = "error"
# reportUnnecessaryTypeIgnoreComment = "error"
# reportImplicitStringConcatenation = true
# reportImplicitOverride = true
# reportShadowedImports = true

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
#    "--cov-fail-under=80",  # STRICT: Require 80% coverage
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
pythonpath = [
  "src"
] # UPDATE as appropriate
# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = ["src"] # UPDATE as appropriate
# branch = true  # STRICT: Enable branch coverage
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# fail_under = 80  # STRICT: Require 80% coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

